--- a/authenticate/templates/account/login.html
+++ b/authenticate/templates/account/login.html
@@ -8,9 +8,12 @@
         <form class="col-md-6" method="post" novalidate>
             {% csrf_token %}
             <div class="form-group my-2">
-            <h4 class="text-muted text-dark">Login to your Account</h4>
+                <h4 class="text-muted text-dark">Login to your Account</h4>
             </div>
             <hr>
+            <div class="form-group my-2">
+                {% include 'account/message.html' %}
+            </div>
             <div class="form-group my-1">
                 <label for="username">Username or Email</label>
                 {{form.username}}
