--- a/authenticate/templates/shope/price.html
+++ b/authenticate/templates/shope/price.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="author" content="sazzad">
   <meta name="description" content="Items Price for saz coffee shope">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hours</title>
   <link rel="icon" href="{% static 'img/fevicon.jpeg' %}" type="image/x-icon">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
