--- a/authenticate/templates/shope/index.html
+++ b/authenticate/templates/shope/index.html
@@ -24,7 +24,7 @@
     <img src="{% static 'img/logo.png' %}" 
     alt="Sazzad coffee hours logo" 
     class="logo">
-    <h1>Welcome To The Sazzad Coffee House</h1>
+    <h1>Sazzad Coffee House</h1>
     <h5 style="font-style: italic; color: gray; margin-top: 0px margin-bottom:1%">Where Every Cup Feels Like Home</h5>
     <nav>
       <ul>
