--- a/authenticate/static/css/style.css
+++ b/authenticate/static/css/style.css
@@ -12,6 +12,11 @@ img {
   max-width: 100%;
   height: auto;
 }
+.errorlist {
+    padding-left: 0px;
+    color: red;
+    list-style: none;
+}
 
 /* Mobile first */
 body {
