--- a/authenticate/templates/account/register.html
+++ b/authenticate/templates/account/register.html
@@ -1,6 +1,6 @@
 {% extends '../base.html' %}
 
-{% block title %}Login{% endblock title %}
+{% block title %}Registration{% endblock title %}
 
 {% block content %}
 <div class="container">
@@ -8,28 +8,37 @@
         <form class="col-md-6" method="post" novalidate>
             {% csrf_token %}
             <div class="form-group my-2">
-                <h4 class="text-muted text-dark">Login to your Account</h4>
+                <h4 class="text-muted text-dark">Registration your Account</h4>
             </div>
             <hr>
             <div class="form-group my-2">
                 {% include 'account/message.html' %}
             </div>
             <div class="form-group my-1">
-                <label for="username">Username or Email</label>
+                <label for="username">Username</label>
                 {{form.username}}
                 {{form.username.errors}}
+            </div>
+            <div class="form-group my-1">
+                <label for="username">Email</label>
+                {{form.email}}
+                {{form.email.errors}}
             </div>
             <div class="form-group my-1">
                 <label for="password">Password</label>
                 {{form.password}}
                 {{form.password.errors}}
             </div>
+            <div class="form-group my-1">
+                <label for="password2">Confirm Password</label>
+                <input class="form-control" type="password" name="password2" id="password2">
+            </div>
             <div class="form-group d-grid gap-2 my-3">
-                <button type="submit" class="btn btn-dark">Login</button>
+                <button type="submit" class="btn btn-dark">Create Account</button>
             </div>
             <div class="my-2 md-2 d-grid align-items-center justify-content-center">
                 <p class="my-0">
-                    Don't have an account ? please <a class="text-decoration-none" href="{% url 'registration' %}">Register here</a>
+                    have an account ? please <a class="text-decoration-none" href="{% url 'login' %}">Login here</a>
                 </p>
             </div>
         </form>
