--- a/authenticate/templates/shope/index.html
+++ b/authenticate/templates/shope/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="author" content="sazzad">
-  <meta name="description" content="The Official Website fot saz coffee shope">
+  <meta name="description" content="The Official Website fot sazzad coffee house">
   <title>sazzad coffee house</title>
   <link rel="icon" href="{% static 'img/fevicon.jpeg' %}" type="image/x-icon">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -15,7 +15,7 @@
     <div class="dropdown" tabindex="0">
       <button class="dropbtn">⋮</button>
       <div class="dropdown-content">
-        <a href="#">🔑 Change Password</a>
+        <a href="{% url 'change_password' %}">🔑 Change Password</a>
         <a href="{% url 'logout' %}">🚪 Logout</a>
       </div>
     </div>
@@ -25,7 +25,7 @@
     alt="Sazzad coffee hours logo" 
     class="logo">
     <h1>Sazzad Coffee House</h1>
-    <h5 style="font-style: italic; color: gray; margin-top: 0px margin-bottom:1%">Where Every Cup Feels Like Home</h5>
+    <h5 style="font-style: italic; color: gray; margin-top: 0px; margin-bottom:1%">Where Every Cup Feels Like Home</h5>
     <nav>
       <ul>
         <li>
